ocp/network-policy-allow-proxy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-8080-frontend 
spec:
  podSelector:
    matchLabels:
      app: ised-proxy-dev
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
