ocp/network-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
